fix: refactor child module and fix hibernate entity constraints